# scitex-compat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-compat-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: conf.py  installation.rst
docs/sphinx/api/: scitex_compat.rst
examples/: quickstart.py
src/scitex_compat/: __init__.py  _compat.py
src/scitex_compat/_skills/: SKILL.md  deprecated-decorator.md  deprecated.md  legacy.md
src/scitex_compat/_skills/scitex-compat/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_python-api.md  10_quick-start.md  11_python-api.md  SKILL.md
src/scitex_compat/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_compat/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/scitex_compat/_sphinx_html/.doctrees/api/: scitex_compat.doctree
src/scitex_compat/_sphinx_html/_modules/: index.html
src/scitex_compat/_sphinx_html/_modules/scitex_compat/: _compat.html
src/scitex_compat/_sphinx_html/_sources/: index.rst.txt
src/scitex_compat/_sphinx_html/api/: scitex_compat.html
tests/: conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py  test_skills_quality.py
tests/scitex_compat/: test__compat.py
