[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-compat"
version = "0.1.0"
description = "Backward compatibility shims and deprecation wrappers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-compat"
Repository = "https://github.com/ywatanabe1989/scitex-compat"
